# oss_pulse

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  github-analytics-plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
common/: settings.json
common/ingest/: entities.json  repos.json
github_ingest/: __main__.py  client.py  common.py  config.py  extractors.py  models.py  pipeline.py  warehouse.py
seeds/: repos.csv
tests/: conftest.py  test_client.py  test_common.py  test_extractors.py  test_logging.py  test_models.py  test_pipeline.py  test_warehouse.py
tests/fixtures/: commit.json  contributor.json  issue.json  pull_request.json  repo.json
