[project]
name = "oss-pulse"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "requests>=2.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "duckdb>=1.1",
    "pyarrow>=17.0",
    # DuckDB requires pytz at runtime to convert TIMESTAMPTZ columns back to Python datetimes.
    "pytz>=2024.1",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.11",
    "responses>=0.25",
    "types-pytz>=2024.1",
    "types-requests>=2.32",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = "duckdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
