[project]
name = "oss-pulse"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "requests>=2.34.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "duckdb>=1.5.4",
    "pyarrow>=24.0.0",
    # DuckDB requires pytz at runtime to convert TIMESTAMPTZ columns back to Python datetimes.
    "pytz>=2026.2",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
    "responses>=0.26.1",
    "types-pytz>=2026.2.0.20260518",
    "types-requests>=2.33.0.20260518",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = "duckdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
